Remove embedded mongo dependency causing pipeline issues and replace with mongo config and test containers
JU-271