@@ -48,6 +48,7 @@
         <commons.io.version>2.16.1</commons.io.version>
         <flapdoodle-embed-mongo.version>4.13.0</flapdoodle-embed-mongo.version>
         <system-stubs-core.version>2.1.6</system-stubs-core.version>
+        <test-containers.version>1.19.7</test-containers.version>
 
         <!-- Docker -->
         <jib-maven-plugin.version>3.4.2</jib-maven-plugin.version>
@@ -60,6 +61,11 @@
         <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
 
         <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
+
+        <argLine>
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED
+        </argLine>
     </properties>
 
     <dependencyManagement>
@@ -68,6 +74,13 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>${spring-boot-dependencies.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers-bom</artifactId>
+                <version>${test-containers.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -250,15 +263,19 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>de.flapdoodle.embed</groupId>
-            <artifactId>de.flapdoodle.embed.mongo</artifactId>
-            <version>${flapdoodle-embed-mongo.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>${commons.io.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>mongodb</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
